objects/Inspection_Field_Explanation__c.object
<CustomObject>
    <description>Explanatory items for an inspection field.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <inlineHelpText>How many times this has been referenced.</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Field_Schema_ID__c</fullName>
        <label>Inspection Field Schema ID</label>
        <referenceTo>Inspection_Field_Schema__c</referenceTo>
        <relationshipLabel>Inspection Field Explanations</relationshipLabel>
        <relationshipName>Inspection_Field_Explanations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Inspection Field Explanation</label>
    <nameField>
        <displayFormat>ife1{0000000000}</displayFormat>
        <label>Inspection Field Explanation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Field Explanations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>